<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:backgroundTint="@color/material_on_primary_emphasis_medium"
        android:gravity="center"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/black"></EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:backgroundTint="@color/material_on_primary_emphasis_medium"
        android:gravity="center"
        android:hint="@string/hint_Password"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@color/black"></EditText>
        <Button
            android:id="@+id/bt_login"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/bt_login"
            android:focusableInTouchMode="false"
            android:layout_below="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
    </RelativeLayout>

